WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
242502
[Web share] canShare() validation returns incorrect result when sharing valid files but invalid URL
https://bugs.webkit.org/show_bug.cgi?id=242502
Summary
[Web share] canShare() validation returns incorrect result when sharing valid...
Marcos Caceres
Reported
2022-07-08 02:54:46 PDT
As shown in /LayoutTests/platform/mac-wk2/imported/w3c/web-platform-tests/web-share/canShare.https-expected.txt, we are failing a test: FAIL canShare() files member assert_false: invalid URL invalidates the share expected false got true In WebKit, canShare() assumes that if any of the things passed are valid, then canShare() returns true. However, the spec says that, if something can't be shared, then canShare() should return false.
Attachments
Add attachment
proposed patch, testcase, etc.
Marcos Caceres
Comment 1
2022-07-08 03:25:15 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/2217
EWS
Comment 2
2022-07-12 18:08:09 PDT
Committed
252403@main
(44186059d58a): <
https://commits.webkit.org/252403@main
> Reviewed commits have been landed. Closing PR #2217 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-07-12 18:09:16 PDT
<
rdar://problem/96921316
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug