[Web share] canShare() validation returns incorrect result when sharing valid files but invalid URL https://bugs.webkit.org/show_bug.cgi?id=242502

Reviewed by Youenn Fablet.

* LayoutTests/platform/ios-wk2/imported/w3c/web-platform-tests/web-share/canShare.https-expected.txt:
* LayoutTests/platform/mac-wk2/imported/w3c/web-platform-tests/web-share/canShare.https-expected.txt:
* Source/WebCore/page/Navigator.cpp:
(WebCore::shareableURLForShareData):
(WebCore::Navigator::canShare):

Canonical link: https://commits.webkit.org/252403@main